header spacing fixes

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -836,13 +836,8 @@ header {
   z-index: 99;
   display: flex;
   align-items: center;
-  a {
-    width: 85px;
-  }
-  a img {
-    padding-left: 0.2vw;
-    width: 177%;
-  }
+
+
   .back-button {
     height: 6.2vh;
     display: flex;
@@ -861,12 +856,28 @@ header {
       padding: inherit;
     }
   }
+  .logo {
+    display: flex;
+    left: 5vw;
+    position: absolute;
+    width: fit-content;
+    img {
+      width: 10vw;
+      height: auto;
+      padding: inherit;
+    }
+  }
+  .share-container {
+    margin-left: calc(91.1vw - 16px);
+    position: absolute;
   .share {
     position: relative;
+    // margin-left: calc(91.1vw - 16px);
     background-repeat: no-repeat;
     display: block;
     font-size: 12px;
-    margin-left: calc(68.7vw - 16px);
+    // margin-left: calc(68.7vw - 16px);
+    // margin-left: 63.5vw;
     font-size: 12px;
     cursor: pointer;
     padding-left: 16px;
@@ -921,7 +932,7 @@ header {
       width: 177px;
       padding: 7px;
       bottom: inherit;
-      transform: translateX(-145%);
+      transform: translateX(-94%);
 
       &::after {
         content: " ";
@@ -941,7 +952,8 @@ header {
       }
       &.valid {
         padding: 8px 29px 8px 8px;
-        transform: translateX(-135%);
+        top: -27.9px;
+        transform: translateX(-91%);
       }
       &.invalid {
         padding: 8px 8px 8px 8px;
@@ -950,6 +962,9 @@ header {
         opacity: 1;
         width: 150px;
         margin-top: 5px;
+        transform: translateX(-94%);
+        margin-top: -2px;
+        transform: translateX(-89%);
         &::after {
           border-color: transparent transparent transparent $color-emphasize;
         }
@@ -993,6 +1008,7 @@ header {
       }
     }
   }
+}
   .text {
     margin-left: 24px;
   }
@@ -1003,7 +1019,7 @@ header {
     height: 100%;
   }
   .models {
-    margin-left: 61.5vw;
+    margin-left: 58.27vw;
     &::before {
       content: "";
       position: absolute;
@@ -1014,7 +1030,8 @@ header {
     }
   }
   .materials {
-    margin-left: 72.8vw;
+    margin-left: 69.62vw;
+
     &::before {
       content: "";
       position: absolute;
@@ -1039,7 +1056,7 @@ header {
     display: inline;
   }
   .schichtler {
-    margin-left: 5vw;
+    margin-left: 12vw;
     white-space: nowrap;
   }
 }
